@@ -61,15 +61,8 @@
 #define PATH_MAX 4096
 #endif
 
-#ifdef USE_SLANG
-/* Slang support. */
-#include <slcurses.h>
-/* Slang curses emulation brain damage, part 3: Slang doesn't define the
- * curses equivalents of the Insert or Delete keys. */
-#define KEY_DC SL_KEY_DELETE
-#define KEY_IC SL_KEY_IC
 /* Ncurses support. */
-#elif defined(HAVE_NCURSES_H)
+#ifdef HAVE_NCURSES_H
 #include <ncurses.h>
 #else
 /* Curses support. */
